--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="cache-control" content="max-age=86400; must-revalidate">
     <meta http-equiv="Content-Security-Policy" content="
-      connect-src * 'self' https://*.googleapis.com;
+      connect-src 'self' https://*.googleapis.com;
       default-src gap: 'self' 'unsafe-inline';
       img-src data: 'self' https://*.tile.openstreetmap.org;
       style-src 'self' 'unsafe-inline';
@@ -26,7 +26,7 @@
     <link rel="icon" href="images/icon.png" type="image/png">
     <link rel="manifest" href="manifest.json">
     <script src="zone.min.js"></script>
-    <title>wooportal</title>
+    <title>Jugendkompass</title>
   </head>
 
   <body>
