Add colour branding

--- a/src/views/brand.scss
+++ b/src/views/brand.scss
@@ -11,59 +11,92 @@ $color-darker: scale-color(white, $lightness: -54%);
 $color-darkest: scale-color(white, $lightness: -87%);
 
 $theme-palette-primary: (
-  50: #e3f2fd,
-  100: #bbdefb,
-  200: #90caf9,
-  300: #64b5f6,
-  400: #42a5f5,
-  500: #2196f3,
-  600: #1e88e5,
-  700: #1976d2,
-  800: #1565c0,
-  900: #0d47a1,
-  A100: #82b1ff,
-  A200: #448aff,
-  A400: #2979ff,
-  A700: #2962ff,
+  50: #fdece7,
+  100: #fad0c2,
+  200: #f6b19a,
+  300: #f29272,
+  400: #f07a53,
+  500: #ed6335,
+  600: #eb5b30,
+  700: #e85128,
+  800: #e54722,
+  900: #e03516,
+  A100: #ffffff,
+  A200: #ffe2de,
+  A400: #ffb6ab,
+  A700: #ff9f91,
   contrast: (
     50: $color-darkest,
     100: $color-darkest,
     200: $color-darkest,
     300: $color-darkest,
     400: $color-darkest,
+    500: $color-darkest,
+    600: $color-darkest,
+    700: $color-lightest,
+    800: $color-lightest,
+    900: $color-lightest,
+    A100: $color-darkest,
+    A200: $color-darkest,
+    A400: $color-darkest,
+    A700: $color-darkest,
+  )
+);
+
+$theme-palette-accent: (
+  50: #e1eaee,
+  100: #b4c9d5,
+  200: #83a6b9,
+  300: #51829c,
+  400: #2b6787,
+  500: #064c72,
+  600: #05456a,
+  700: #043c5f,
+  800: #033355,
+  900: #022442,
+  A100: #77b3ff,
+  A200: #4496ff,
+  A400: #117aff,
+  A700: #006cf6,
+  contrast: (
+    50: $color-darkest,
+    100: $color-darkest,
+    200: $color-darkest,
+    300: $color-lightest,
+    400: $color-lightest,
     500: $color-lightest,
     600: $color-lightest,
     700: $color-lightest,
     800: $color-lightest,
     900: $color-lightest,
     A100: $color-darkest,
-    A200: $color-lightest,
+    A200: $color-darkest,
     A400: $color-lightest,
-    A700: $color-lightest
+    A700: $color-lightest,
   )
 );
 
-$theme-palette-accent: (
-  50: #e0f7fa,
-  100: #b2ebf2,
-  200: #80deea,
-  300: #4dd0e1,
-  400: #26c6da,
-  500: #00bcd4,
-  600: #00acc1,
-  700: #0097a7,
-  800: #00838f,
-  900: #006064,
-  A100: #84ffff,
-  A200: #18ffff,
-  A400: #00e5ff,
-  A700: #00b8d4,
+$theme-palette-warn: (
+  50: #ffe0e0,
+  100: #ffb3b3,
+  200: #ff8080,
+  300: #ff4d4d,
+  400: #ff2626,
+  500: #ff0000,
+  600: #ff0000,
+  700: #ff0000,
+  800: #ff0000,
+  900: #ff0000,
+  A100: #ffffff,
+  A200: #fff2f2,
+  A400: #ffbfbf,
+  A700: #ffa6a6,
   contrast: (
     50: $color-darkest,
     100: $color-darkest,
     200: $color-darkest,
     300: $color-darkest,
-    400: $color-darkest,
+    400: $color-lightest,
     500: $color-lightest,
     600: $color-lightest,
     700: $color-lightest,
@@ -72,40 +105,7 @@ $theme-palette-accent: (
     A100: $color-darkest,
     A200: $color-darkest,
     A400: $color-darkest,
-    A700: $color-darkest
-  )
-);
-
-$theme-palette-warn: (
-  50: #ffebee,
-  100: #ffcdd2,
-  200: #ef9a9a,
-  300: #e57373,
-  400: #ef5350,
-  500: #f44336,
-  600: #e53935,
-  700: #d32f2f,
-  800: #c62828,
-  900: #b71c1c,
-  A100: #ff8a80,
-  A200: #ff5252,
-  A400: #ff1744,
-  A700: #d50000,
-  contrast: (
-    50: $color-darkest,
-    100: $color-darkest,
-    200: $color-darkest,
-    300: $color-darkest,
-    400: $color-darkest,
-    500: $color-lightest,
-    600: $color-lightest,
-    700: $color-lightest,
-    800: $color-lightest,
-    900: $color-lightest,
-    A100: $color-darkest,
-    A200: $color-lightest,
-    A400: $color-lightest,
-    A700: $color-lightest
+    A700: $color-darkest,
   )
 );
 
