--- a/src/views/index.html
+++ b/src/views/index.html
@@ -15,7 +15,7 @@
     <meta name="format-detection" content="email=no">
     <meta name="format-detection" content="telephone=no">
     <meta name="google" content="notranslate">
-    <meta name="theme-color" content="#2196f3">
+    <meta name="theme-color" content="#ed6335">
     <meta name="viewport" content="
       initial-scale=1,
       user-scalable=no,
