--- a/src/views/public/pages/home/home.page.html
+++ b/src/views/public/pages/home/home.page.html
@@ -17,6 +17,19 @@
   </section>
   <section>
     <article class="mat-title" [innerHTML]="content"></article>
+    <aside>
+      <figure>
+        <video controls>
+          <source src="videos/intro.mp4" type="video/mp4">
+        </video>
+        <figcaption>
+          <fa-icon icon="film"></fa-icon>
+          <strong class="mat-title">
+            <i18n>videoIntro</i18n>
+          </strong>
+        </figcaption>
+      </figure>
+    </aside>
   </section>
   <section>
     <figure>
