Fix CSR/www subdomain handling

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="cache-control" content="max-age=86400; must-revalidate">
     <meta http-equiv="Content-Security-Policy" content="
-      connect-src 'self' https://jugendkompass-din.de https://*.googleapis.com;
+      connect-src 'self'
+        https://www.jugendkompass-din.de
+        https://*.googleapis.com;
       default-src gap: 'self' 'unsafe-inline';
       img-src data: 'self'
         https://*.tile.openstreetmap.org
