--- a/src/views/index.html
+++ b/src/views/index.html
@@ -21,7 +21,7 @@
     <meta name="format-detection" content="email=no">
     <meta name="format-detection" content="telephone=no">
     <meta name="google" content="notranslate">
-    <meta name="theme-color" content="#ed6335">
+    <meta name="theme-color" content="#e14c43">
     <meta name="viewport" content="
       initial-scale=1,
       user-scalable=no,
